Search for a current node - do not search throughout the entire stack, but only through children. We look at the list of commands, go along the sheet, recreate the nodes until we hit zero < < < DONE Make map initialization shorter and better. The best way is to use static {put(); put()...}  < < < DONE To fix adding commands into map - we can add there ALL commands, don't need to add additional Enum objects just for map.  < < < DONE Search and destroy all Enum arrays - change it to StepsIndicator interface.  < < < DONE userProgress[]  - to find a way to remove ternar operations. It is possible to make a videos and discuss it with Maksim.  < < < DONE Try to add null into map - it is possible, it can help us to fix problem with userProgress[] ternar Create a layer between UserProgressManager and Tree. Name it UserProgressValidator. Design it not as a singleton, but as a static one. Make a Tree field inside the UserProgressValidator; it should also be static. < < < DONE Fix bugs in the Tree pull request. < < < DONE (one left) Github - find all old comments before map and fix it. All of them.  < < < DONE (one left)